# luotsi

./: .gitignore  README.md  multi_agent_audit.jsonl  requirements.txt
dashboard/: package-lock.json  package.json  server.js
dashboard/public/: index.html
dashboard/public/css/: style.css
dashboard/public/js/: app.js
docs/: hot_reload.md  index.md
docs/adapters/: stdio.md
docs/docs/: adapters.md  architecture.md  development.md  governance.md  hot_reload.md  index.md  mcp_integration.md  observability.md  policies.md  ports.md  roles.md  routing.md  tracing.md
docs/docs/adapters/: stdio.md
docs/docs/internal/: architecture.md  governance.md  mcp_integration.md  payload_guard.md  policies.md  routing.md
docs/internal/: architecture.md  development.md
luotsi-core/: CMakeLists.txt
luotsi-core/src/adapters/: adapter.hpp  jsonrpc_tcp_adapter.cpp  jsonrpc_tcp_adapter.hpp  stdio_adapter.cpp  stdio_adapter.hpp
luotsi-core/src/core/: config.cpp  config.hpp  internal_types.hpp  main.cpp  observability.cpp  observability.hpp  runtime.cpp  runtime.hpp
luotsi-core/src/ports/: agent_port.hpp  mcp_port.hpp  port.hpp  port_impl.hpp
luotsi-core/tests/: CMakeLists.txt  integration_config.yaml  jsonrpc_config.yaml  luotsi  run_integration.sh  run_jsonrpc_test.sh  test_config.yaml  test_main.cpp
luotsi-core/tests/mocks/json_rpc2/: tcp_mock.py
luotsi-core/tests/mocks/stdio/: chat_mock.py  mcp_mock.py
playground/: setup.sh  test_client.py  verify_episodic.py  verify_master.py
playground/configs/: inspector_config.yaml  langchain_odoo.config.yaml  luotsi.config.yaml  mock_multi_agent.config.yaml  multi_agent.config.yaml  policies.yaml
playground/customer-service-agent/: Dockerfile  cs_agent.py
playground/dummy-mcp/: Dockerfile  dummy_mcp.py
playground/inspector-gateway/: inspector_gateway.js
playground/langchain-agent/: Dockerfile  agent.py  master_mock.py
playground/mcp-odoo/: Dockerfile
playground/memory-mcp/: Dockerfile  memory_mcp.py
playground/odoo/: Dockerfile  odoo_mock.py
playground/session-memory/: Dockerfile  session_memory.py
playground/wa-gateway/: Dockerfile  gateway_local_testing.md  wa_gateway.py
playground/whatsapp/: Dockerfile  whatsapp_mock.py
